...
import de.niilz.probierless.ui.components.common.MyButton
import de.niilz.probierless.ui.components.common.MyInput
import de.niilz.probierless.ui.navigation.NavControllerManager
import de.niilz.probierless.ui.navigation.UiStateEnum
import de.niilz.probierless.ui.theme.ProBierLessTheme

const val DAYS_PER_WEEK_INPUT_TAG = "days_per_week_input_tag"
const val SAVE_BUTTON_TAG = "save-button-tag"

@Composable
fun Settings(
    innerPadding: PaddingValues = PaddingValues(0.dp),
    navController: NavHostController? = null
) {
...
