...
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.text.style.TextAlign
import androidx.compose.ui.tooling.preview.Preview
import de.niilz.probierless.ui.theme.ProBierLessTheme

const val DAYS_PER_WEEK_TAG = "days_per_week_tag"

@Composable
fun MaxAmountSetting(
    modifier: Modifier = Modifier,
    maxAlcAmountPerDayGram: Int, maxAlcDaysPerWeek: Int
) {
...
